tests/fixtures/valid/ignored/builtins/list.py
# Valid list() calls
# Auto-generated by scripts/generate_tests.py

b0_list_str = list("hello")
b1_list_bytes = list(b"hello")
b2_list_list = list([1, 2, 3])
b3_list_dict = list({"a": 1})
b4_list_set = list({1, 2, 3})

print("list() tests passed!")
